Bug 1012632 - IonMonkey: Recover Mod instructions. r=nbp